--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <div class="background"></div>
     <div class="content">
-        Our casino
+        Our Casino
     </div>
     <script src="script.js"></script>
 </body>
